[gd_scene load_steps=29 format=3 uid="uid://c0xj68sjraaot"]

[ext_resource type="Texture2D" uid="uid://d3pgw8m204ad3" path="res://Sprites/pumpSpritesheet.png" id="1_6hvs2"]
[ext_resource type="Script" uid="uid://dd6cv130cfeqe" path="res://Scripts/ceiling_pump.gd" id="1_b2cc2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b2cc2"]
atlas = ExtResource("1_6hvs2")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_aunxq"]
atlas = ExtResource("1_6hvs2")
region = Rect2(320, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yles0"]
atlas = ExtResource("1_6hvs2")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce4vd"]
atlas = ExtResource("1_6hvs2")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_07dsx"]
atlas = ExtResource("1_6hvs2")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb5ey"]
atlas = ExtResource("1_6hvs2")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0c11"]
atlas = ExtResource("1_6hvs2")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1f2h"]
atlas = ExtResource("1_6hvs2")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi63n"]
atlas = ExtResource("1_6hvs2")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nkd2"]
atlas = ExtResource("1_6hvs2")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8g1i"]
atlas = ExtResource("1_6hvs2")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8q0d"]
atlas = ExtResource("1_6hvs2")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqshh"]
atlas = ExtResource("1_6hvs2")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2o5w"]
atlas = ExtResource("1_6hvs2")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx05b"]
atlas = ExtResource("1_6hvs2")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0hmw"]
atlas = ExtResource("1_6hvs2")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcu6"]
atlas = ExtResource("1_6hvs2")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk1a1"]
atlas = ExtResource("1_6hvs2")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n661"]
atlas = ExtResource("1_6hvs2")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5d38"]
atlas = ExtResource("1_6hvs2")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy16s"]
atlas = ExtResource("1_6hvs2")
region = Rect2(320, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx4g6"]
atlas = ExtResource("1_6hvs2")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tiby"]
atlas = ExtResource("1_6hvs2")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7fo1"]
atlas = ExtResource("1_6hvs2")
region = Rect2(160, 240, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_n50kn"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_b2cc2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_aunxq")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_yles0")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ce4vd")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_07dsx")
}],
"loop": false,
"name": &"failedPump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb5ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0c11")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_n1f2h")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_pi63n")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_0nkd2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_b8g1i")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_w8q0d")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_bqshh")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_o2o5w")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_rx05b")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_v0hmw")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_qqcu6")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_tk1a1")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_2n661")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_x5d38")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_xy16s")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wx4g6")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_7tiby")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_l7fo1")
}],
"loop": false,
"name": &"pump",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aunxq"]
size = Vector2(43, 13)

[node name="CeilingPump" type="Node2D"]
script = ExtResource("1_b2cc2")

[node name="pumpAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_n50kn")
animation = &"failedPump"

[node name="pumpTrigger" type="Area2D" parent="." groups=["clickable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pumpTrigger"]
position = Vector2(-12.5, 8.5)
shape = SubResource("RectangleShape2D_aunxq")

[connection signal="animation_finished" from="pumpAnimation" to="." method="_on_pump_animation_animation_finished"]
[connection signal="input_event" from="pumpTrigger" to="." method="_on_pump_trigger_input_event"]
[connection signal="mouse_entered" from="pumpTrigger" to="." method="_on_pump_trigger_mouse_entered"]
[connection signal="mouse_exited" from="pumpTrigger" to="." method="_on_pump_trigger_mouse_exited"]
